# book-agentic-ai-edn-1

./: LICENSE  README.md
Chapter_4/: ChatMessageHistory.json  EntityMemory.json  Sample_MongoDB_Document.json
Chapter_4/4.2.5/: ChatMessageHistory.json  EntityMemory.json  Sample_MongoDB_Document.json
Chapter_4/4.3.1/: Sample_ChatPromptTemplate.py  Sample_FewShotPromptTemplate.py  Sample_JsonOutputParser.py  Sample_Prompt_Template.py
Chapter_4/4.3.2/: Sample_ChainWithMemory.py  Sample_LLMChain.py  Sample_SequentialChain.py
Chapter_4/4.3.4/: Sample_Tool_Integration.py
Chapter_4/4.3.5/: Sample_PromptTemplateWithMemoryVariable.py
Chapter_4/4.4.1/: Sample_MongoDB_Setup.py
Chapter_4/4.4.2/: Sample_Tool_Email.py
Chapter_4/4.4.3/: Sample_Tool_Invocation.py
Chapter_4/4.4.4/: Sample_UpdatingMemory.py
Chapter_4/4.4.5/: Sample_Managing_State.py
Chapter_4/4.5.1/: agentic_ai_app.py
Chapter_4/4.5.3/: AI_Tutor.env
Chapter_8/patient_diagnosis_ai/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run_system.py
Chapter_8/patient_diagnosis_ai/alembic/: env.py
Chapter_8/patient_diagnosis_ai/src/: __init__.py
Chapter_8/patient_diagnosis_ai/src/agents/: __init__.py  base_agent.py  drug_safety_agent.py  image_analysis_agent.py  literature_research_agent.py  medical_coding_agent.py  patient_history_agent.py
Chapter_8/patient_diagnosis_ai/src/api/: __init__.py  main.py  models.py
Chapter_8/patient_diagnosis_ai/src/config/: __init__.py  prompts.py  settings.py
Chapter_8/patient_diagnosis_ai/src/db/: __init__.py  engines.py  models.py  neo4j_schema.py
Chapter_8/patient_diagnosis_ai/src/knowledge/: __init__.py  fda_api_client.py  fhir_client.py  pubmed_client.py  terminology_service.py
Chapter_8/patient_diagnosis_ai/src/observability/: __init__.py  tracing.py
Chapter_8/patient_diagnosis_ai/src/orchestrator/: __init__.py  state_management.py  supervisor.py  workflow_graph.py
Chapter_8/patient_diagnosis_ai/src/utils/: __init__.py  compliance.py  medical_nlp.py  monitoring.py
(+8 files in other folders)
